# ffffff

./: .clang-format  CMakeLists.txt  README.md  cppreference.txt  debug_tools.h  deprecated.h  ffffff.h  main.cpp  tmf.h  tu_1.cpp  tu_1.h  underscore.cpp  underscore.h  underscoreimpl.cpp  underscoreimpl.h  us_tmf.h  usconcepts.h
ffffff/: basic_ops.hpp  bind.hpp  classify.h  dataflow.hpp  debug_tools.h  functors.hpp  interfaces.hpp  monads.hpp  multiargs.hpp  multireturn.hpp  overload.hpp  package.hpp  pipeline.hpp  practice.hpp  reducible.hpp  tmf.hpp  utils.hpp
include/: basic_ops.hpp  ffffff.hpp  tmf.hpp
